examples/test/testpolicy11762.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11762
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key25: value38
      key6: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value44
          key6: value38
      podSelector:
        matchLabels:
          key17: value17
          key36: value7
